// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  data-test-id="foo"
>
  <Translate
    className="css-1815nu9 "
    params={
      Array [
        null,
      ]
    }
    role={null}
    string="foo"
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  data-test-id="SAVE {0}%"
>
  <Translate
    className="css-1815nu9 "
    params={
      Array [
        20,
      ]
    }
    role={null}
    string="SAVE {0}%"
  />
</div>
`;
